# pywad

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  REVIEW.md  TODO.md  e1m1.mid  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  nightly.yml
.omc/state/: hud-state.json  hud-stdin-cache.json
completion/: wadcli.bash  wadcli.zsh
docs/: api.md  cli.md  formats.md  games.md  guides.md  index.md
docs/guides/: analysis.md  assets.md  io.md  maps.md  sourceports.md
examples/: 01_inspect_wad.py  02_extract_assets.py  03_build_pwad.py  04_pwad_stack.py  05_audio_conversion.py  06_texture_audit.py  07_diagnostics.py  08_zdoom_mod_info.py  09_wad_diff.py  10_render_maps.py
pywad/: __init__.py  constants.py  directory.py  enums.py  exceptions.py  exporter.py  map.py  wad.py
pywad/lumps/: base.py  blockmap.py  hexen.py  lines.py  map.py  segs.py  things.py  vertices.py
scripts/: uwad
tests/: conftest.py  test_animated.py  test_animdefs.py  test_archive.py  test_blockmap.py  test_boom.py  test_check.py  test_cli.py  test_cli_direct.py  test_cli_low_coverage.py  test_colormap.py  test_compat.py  test_compositor.py  test_decorate.py  test_dehacked.py  test_demo.py  test_directory.py  test_doom_types.py  test_endoom.py  test_export3d.py  test_exporter.py  test_flat.py  test_fuse.py  test_fuzz_parsers.py  test_hardening.py  test_header.py  test_heretic_hexen_strife_deep.py  test_hexen.py  test_iwad_smoke.py  test_iwad_smoke_free.py  test_language.py  test_lumps.py  test_lumps_coverage.py  test_mapinfo.py  test_maps.py  test_mid2mus.py  test_mus.py  test_new_features.py  test_nodes.py  test_phase2_maps.py  (+28 more)
wadlib/: __init__.py  analysis.py  archive.py  compat.py  compositor.py  constants.py  directory.py  doom_types.py  enums.py  exceptions.py  export3d.py  exporter.py  fuse.py  heretic_types.py  hexen_types.py  pk3.py  registry.py  renderer.py  resolver.py  scanner.py  source.py  strife_types.py  thing_types.py  validate.py  wad.py  writer.py
wadlib/cli/: __init__.py  _wad_args.py  mount.py
wadlib/cli/commands/: __init__.py  check.py  complevel.py  convert.py  diff.py  export_animation.py  export_colormap.py  export_endoom.py  export_flat.py  export_font.py  export_map.py  export_music.py  export_obj.py  export_palette.py  export_patch.py  export_sound.py  export_sprite.py  export_texture.py  extract_lump.py  info.py  list_actors.py  list_animations.py  list_flats.py  list_language.py  list_lumps.py  list_mapinfo.py  list_maps.py  list_music.py  list_patches.py  list_scripts.py  list_sndseq.py  list_sounds.py  list_sprites.py  list_stats.py  list_textures.py  scan_textures.py
wadlib/lumps/: acs.py  animated.py  animdefs.py  base.py  behavior.py  blockmap.py  boom.py  colormap.py  decorate.py  dehacked.py  demo.py  endoom.py  flat.py  glnodes.py  hexen.py  language.py  lines.py  map.py  mapinfo.py  mid2mus.py  mus.py  nodes.py  ogg.py  picture.py  playpal.py  sectors.py  segs.py  sidedefs.py  sndinfo.py  sndseq.py  sound.py  strife_conversation.py  textures.py  texturex.py  things.py  udmf.py  vertices.py  zmapinfo.py  znodes.py
wadlib/lumps/dehacked/: __init__.py  data.py  parser.py  types.py
wadlib/renderer/: __init__.py  ascii.py  core.py  floors.py  geometry.py
wadlib/types/: __init__.py  base.py  dehacked.py  doom.py  heretic.py  hexen.py  strife.py
