[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wadlib"
version = "0.4.4"
description = "Python library to read, write, and analyse id Software WAD files"
readme = "README.md"
authors = [{ name = "Alex Rembish", email = "alex@rembish.org" }]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = ["Pillow>=9.2"]
keywords = [
    "doom", "wad", "game", "id-software", "modding",
    "doom2", "heretic", "hexen", "strife", "gzdoom", "zdoom",
    "game-tools", "level-editor", "pwad", "iwad",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: First Person Shooters",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/rembish/wadlib"
Repository = "https://github.com/rembish/wadlib"
"Bug Tracker" = "https://github.com/rembish/wadlib/issues"
Documentation = "https://rembish.github.io/wadlib/"
Changelog = "https://github.com/rembish/wadlib/blob/master/CHANGELOG.md"

[project.scripts]
wadcli = "wadlib.cli:main"
wadmount = "wadlib.cli.mount:main"

[project.optional-dependencies]
fuse = ["fusepy>=3.0"]
docs = ["mkdocs-material>=9.5"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "pylint>=3.2",
    "build>=1.0",
    "twine>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wadlib*"]

[tool.setuptools.package-data]
wadlib = ["py.typed"]

# ---------------------------------------------------------------------------
# ruff — linting + formatting (replaces flake8, isort, pyupgrade, etc.)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "RUF",      # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["wadlib"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

# ---------------------------------------------------------------------------
# pylint
# ---------------------------------------------------------------------------
[tool.pylint.main]
py-version = "3.12"
fail-under = 9.8

[tool.pylint.design]
max-attributes = 20
max-locals = 25
max-branches = 20
max-statements = 70

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "W0511",  # fixme — TODO comments are intentional
    "C0414",  # useless-import-alias — used for explicit re-exports (mypy)
    "R0801",  # duplicate-code — CLI commands share similar boilerplate by design
    "R0917",  # too-many-positional-arguments — parsers need many params
    "C0415",  # import-outside-toplevel — used for lazy/conditional imports
]

[tool.pylint.format]
max-line-length = 100

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q --cov=wadlib --cov-report=term-missing --cov-fail-under=80 -m 'not slow'"
markers = [
    "slow: marks tests as slow (deselected by default; run with -m slow or -m '')",
]

[tool.coverage.run]
branch = true
source = ["wadlib"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]
